-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.10.0
-
Fix Version/s: None
-
Component/s: Appender
-
Labels:None
-
Environment:Windows Vista x64 compiling with Visual Studio 2008
When a connected client disconnects from a SocketHubAppender log4cxx throughs an exception. From looking at the code, what is happening is the disconnected client is being erased from a output stream vector, which invalidates a .end() iterator which is being used in a while loop. The simple fix would be to reassign the end iterator after erasing the disconnected client.
I don't have developer access so I can't check my patch in.