LOGCXX-353: When a client disconnects the SocketHubAppender crashes on the next log message